--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@types/redux-form": "^7.2.5",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
+    "react-json-view": "^1.16.6",
     "react-redux": "^5.0.7",
     "react-scripts-ts": "2.16.0",
     "redux": "^4.0.0",
