--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@types/classnames": "^2.2.3",
     "@types/react-redux": "^6.0.0",
     "@types/redux-form": "^7.2.5",
+    "capitalize": "^1.0.0",
     "classnames": "^2.2.5",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
@@ -22,6 +23,7 @@
     "eject": "react-scripts-ts eject"
   },
   "devDependencies": {
+    "@types/capitalize": "^1.0.1",
     "@types/jest": "^22.2.3",
     "@types/node": "^10.0.8",
     "@types/react": "^16.3.14",
